# reddit-digest

./: .env.example  .gitignore  CLAUDE.md  config.yaml  pyproject.toml
src/reddit_digest/: __init__.py  cli.py  config.py  db.py  emailer.py  fetcher.py  filter.py  html_generator.py  main.py  stats.py
systemd/: reddit-digest.service  reddit-digest.timer
